# OTUS-HOME-WORKS

OTUS-CPP-HW-1/: .gitignore  CMakeLists.txt
OTUS-CPP-HW-1/.github/workflows/: release.yml
OTUS-CPP-HW-1/lib/: lib.cpp  lib.h
OTUS-CPP-HW-1/src/: main.cpp
OTUS-CPP-HW-1/unit-tests/: CMakeLists.txt  lib-unittest.cpp  main.cpp
OTUS-CPP-HW-10/: CMakeLists.txt
OTUS-CPP-HW-10/src/: App.cpp  App.h  CMakeLists.txt  main.cpp
OTUS-CPP-HW-10/src/command-bundler/: Command.h  CommandBundler.cpp  CommandBundler.h  Context.cpp  Context.h
OTUS-CPP-HW-10/src/processors/: IBlockProcessor.h  MultiThreadProcessor.cpp  ThreadSafeQueue.cpp  ThreadSafeQueue.h
OTUS-CPP-HW-10/src/processors/threads/: ConsoleThreadProcessor.cpp  FileThreadProcessor.cpp  ThreadProcessor.cpp  ThreadProcessor.h
OTUS-CPP-HW-10/src/server/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  IRequestHandler.h  IRequestHandlerFactory.h  Server.cpp  Server.h
OTUS-CPP-HW-10/src/server/request-handlers/: CommandsRequestHandler.cpp  CommandsRequestHandler.h  CommandsRequestHandlerFactory.cpp  CommandsRequestHandlerFactory.h
OTUS-CPP-HW-10/src/types/: Block.cpp  Block.h
OTUS-CPP-HW-10/src/unit-tests/: CMakeLists.txt  UnitTest_CommandBundler.cpp
OTUS-CPP-HW-10/src/utils/: Utils.h
OTUS-CPP-HW-11/: CMakeLists.txt
OTUS-CPP-HW-11/src/: App.cpp  App.h  CMakeLists.txt  main.cpp
OTUS-CPP-HW-11/src/db/: DBBuilder.cpp  DBBuilder.h  DBTable.cpp  DBTable.h  DatabaseContext.cpp  DatabaseContext.h
OTUS-CPP-HW-11/src/server/: Connection.cpp  Connection.h  IRequestHandler.h  Server.cpp
OTUS-CPP-HW-11/src/server/request-handlers/: RequestParser.cpp  RequestParser.h  TablesManagerRequestHandler.cpp  TablesManagerRequestHandler.h  TablesManagerRequestHandlerFactory.cpp  TablesManagerRequestHandlerFactory.h
OTUS-CPP-HW-11/src/tables-manager/: DBTablesManager.cpp  DBTablesManager.h  ITablesManager.h
OTUS-CPP-HW-11/src/types/: Entities.h
OTUS-CPP-HW-11/src/unit-tests/: UnitTest_DBTablesManager.cpp
OTUS-CPP-HW-12/src/: CMakeLists.txt  UserMapper.cpp  UserMapper.h  UserReducer.cpp  UserReducer.h  main.cpp
OTUS-CPP-HW-12/src/map-reducer/include/: IMapper.h  IReducer.h  MapReducer.h
OTUS-CPP-HW-12/src/map-reducer/src/: FileLinesReader.cpp  FileLinesReader.h  MapReducer.cpp  MapperTask.cpp  MapperTask.h  Range.h  ReducerTask.cpp  ReducerTask.h  Shuffler.cpp  Shuffler.h  Splitter.cpp  Splitter.h
OTUS-CPP-HW-12/src/unit-tests/: CMakeLists.txt
OTUS-CPP-HW-13/src/: CMakeLists.txt  main.cpp
OTUS-CPP-HW-13/src/classifiers/: Classifier.h  ClassifierUtils.h  TensorflowClassifier.cpp  TensorflowClassifier.h
OTUS-CPP-HW-13/src/unit-tests/: CMakeLists.txt  Unittest_TensorflowClassifier.cpp
OTUS-CPP-HW-2/: CMakeLists.txt
OTUS-CPP-HW-2/.github/workflows/: release.yml
OTUS-CPP-HW-2/src/: ip.cpp  ip.h  main.cpp  utils.cpp  utils.h
OTUS-CPP-HW-2/unit-tests/: CMakeLists.txt  unit-test-ip.cpp  unit-test-utils.cpp
OTUS-CPP-HW-4/: CMakeLists.txt
OTUS-CPP-HW-4/.github/workflows/: release.yml
OTUS-CPP-HW-4/doc/: Doxyfile
OTUS-CPP-HW-4/src/: main.cpp  type_traits_extending.h  utils.cpp  utils.h
OTUS-CPP-HW-4/unit-tests/: CMakeLists.txt
OTUS-CPP-HW-5/: CMakeLists.txt
OTUS-CPP-HW-5/.github/workflows/: release.yml
OTUS-CPP-HW-5/doc/: Doxyfile
OTUS-CPP-HW-5/src/: main.cpp
OTUS-CPP-HW-5/src/controller/: CanvasController.cpp  CanvasController.h  DocumentsController.cpp  DocumentsController.h
OTUS-CPP-HW-5/src/services/: CanvasService.cpp  CanvasService.h  DocumentsService.cpp  DocumentsService.h  ICanvasService.h  IDocumentsService.h
OTUS-CPP-HW-5/src/types/: Canvas.cpp  Canvas.h  Document.cpp  Document.h  Observable.cpp  Observable.h  Shape.cpp  Shape.h
OTUS-CPP-HW-5/src/view/: CanvasView.cpp  CanvasView.h  DocumentsView.cpp  DocumentsView.h
OTUS-CPP-HW-7/: CMakeLists.txt
OTUS-CPP-HW-7/.github/workflows/: release.yml
OTUS-CPP-HW-7/src/: CommandBundler.cpp  CommandBundler.h  CommandReader.cpp  CommandReader.h  main.cpp
OTUS-CPP-HW-7/src/commands/: Block.cpp  Block.h  Command.cpp  Command.h
OTUS-CPP-HW-7/src/processors/: ConsoleProcessor.cpp  ConsoleProcessor.h  FileProcessor.cpp  FileProcessor.h  ICommandProcessor.h
OTUS-CPP-HW-7/unit-tests/: CMakeLists.txt  UnitTest_CommandBundler.cpp
OTUS-CPP-HW-8/: CMakeLists.txt  Readme.md
OTUS-CPP-HW-8/.github/workflows/: release.yml
OTUS-CPP-HW-8/src/: main.cpp
OTUS-CPP-HW-8/src/duplicate-finder/: DuplicateFinder.cpp  DuplicateFinder.h  FileBlockHashReader.cpp  FileBlockHashReader.h  FileComparator.cpp  FileComparator.h
OTUS-CPP-HW-8/src/duplicate-finder/hash/: Crc32Calculator.cpp  Crc32Calculator.h  DefaultHashCalculator.cpp  DefaultHashCalculator.h  HashCalculator.h
OTUS-CPP-HW-8/src/file-scanner/: FileScanner.cpp  FileScanner.h
OTUS-CPP-HW-8/src/types/: FileInfo.h
OTUS-CPP-HW-8/src/utils/: Arguments.h  ArgumentsReader.cpp  ArgumentsReader.h
OTUS-CPP-HW-8/unit-tests/: CMakeLists.txt  Config.cpp
OTUS-CPP-HW-8/unit-tests/resources/duplicate-finder/: cpp-file.cpp
OTUS-CPP-HW-8/unit-tests/resources/duplicate-finder/inner-dir/: hello_c
OTUS-CPP-HW-8/unit-tests/resources/duplicate-finder/inner-dir-2/: h-file-not-duplicate.h
OTUS-CPP-HW-8/unit-tests/resources/file-scanner/scan_folder_2/: file2.css  file2.html
OTUS-CPP-HW-8/unit-tests/tests/: UnitTest_DuplicateFinder.cpp  UnitTest_FileScanner.cpp
OTUS-CPP-HW-9/async/: CMakeLists.txt  main.cpp
OTUS-CPP-HW-9/async/include/: async.h
OTUS-CPP-HW-9/async/src/: Server.cpp  Server.h  async.cpp
OTUS-CPP-HW-9/async/src/command-bundler/: Command.cpp  CommandBundler.cpp  CommandBundler.h  Context.cpp  Context.h  State.h
OTUS-CPP-HW-9/async/src/processors/: IBlockProcessor.h  MultiThreadProcessor.h  ThreadSafeQueue.h
OTUS-CPP-HW-9/async/src/processors/threads/: ConsoleThreadProcessor.cpp  ConsoleThreadProcessor.h  FileThreadProcessor.cpp  FileThreadProcessor.h  ThreadProcessor.h
OTUS-CPP-HW-9/async/src/types/: Block.cpp  Block.h
OTUS-CPP-HW-9/async/src/utils/: Utils.cpp
OTUS-CPP-HW-9/async/unit-tests/: CMakeLists.txt  UnitTest_CommandBundler.cpp
(+36 files in other folders)
